# data_structures_docker

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
Data-Structures/: README.md
Data-Structures/Binary_Search_Tree/: Q1_F_BST.c  Q2_F_BST.c  Q3_F_BST.c  Q4_F_BST.c  Q5_F_BST.c
Data-Structures/Binary_Tree/: Q1_E_BT.c  Q2_E_BT.c  Q3_E_BT.c  Q4_E_BT.c  Q5_E_BT.c  Q6_E_BT.c  Q7_E_BT.c  Q8_E_BT.c
Data-Structures/Linked_List/: Q1_A_LL.c  Q2_A_LL.c  Q3_A_LL.c  Q4_A_LL.c  Q5_A_LL.c  Q6_A_LL.c  Q7_A_LL.c
Data-Structures/Stack_and_Queue/: Q1_C_SQ.c  Q2_C_SQ.c  Q3_C_SQ.c  Q4_C_SQ.c  Q5_C_SQ.c  Q6_C_SQ.c  Q7_C_SQ.c
reports/: 001_initial-evaluation.md  002_study-checklist.md  003_follow-up-resolution-check.md
